<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_feed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.fmgroup.pronostigram.FeedActivity"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="horizontal"
        android:weightSum="100"
        android:background="@drawable/border"> >

        <TextView
            android:id="@+id/textview_feeds_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:text="@string/title_feed_activity"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold" />


        <ImageButton
            android:id="@+id/button_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:background="@android:color/transparent"
            android:src="@mipmap/icon_search"
            android:scaleX="1"
            android:scaleY="1"/>

        <ImageButton
            android:id="@+id/button_profile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:background="@android:color/transparent"
            android:src="@mipmap/icon_profile"
            android:scaleX="1"
            android:scaleY="1"/>


        <ImageButton
            android:id="@+id/button_settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:background="@android:color/transparent"
            android:src="@mipmap/icon_settings"
            android:scaleX="1"
            android:scaleY="1"/>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80">

        <ListView
            android:id="@+id/list_view_feed"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floating_action_button_listview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="13dp"
            android:clickable="true"
            android:src="@drawable/ic_plus"
            app:elevation="4dp"
            app:fabSize="normal"
            android:onClick="onButtonStartMatchActivity"/>

    </RelativeLayout>

</LinearLayout>
